--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -56,5 +56,6 @@
 <script type="text/javascript" src="assets/js/custom.js"></script>
 
 <script type="text/javascript" src="assets/js/wish.js"></script>
+<script type="text/javascript" src="assets/js/review.js"></script>
 </body>
 </html>
